--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
+              // Palette baseada na imagem do sistema
               primary: {
                 DEFAULT: '#00b4d8',
                 dark: '#0096c7',
@@ -62,7 +63,7 @@
 </head>
   <body class="bg-gray-50 text-gray-900 dark:bg-[#021221] dark:text-gray-100 transition-colors duration-200">
     <div id="root"></div>
-    <!-- Adicionado o script para carregar a aplicação -->
+    <!-- O AJUSTE: Adicionando a chamada para o arquivo de entrada da aplicação -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
