--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
 </head>
   <body class="bg-gray-50 text-gray-900 dark:bg-[#021221] dark:text-gray-100 transition-colors duration-200">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
